...
                        LocalViewerImmersive provides immersive,
                        LocalViewerToggleImmersive provides toggleImmersive,
                        LocalViewerSetImmersive provides setImmersive,
                        LocalContentColor provides contentColor
                    ) {
                        Box(
                            Modifier.fillMaxSize().testTag("attachment_viewer")
                                .semantics {
                                    toggleableState = if (immersive) ToggleableState.On else ToggleableState.Off
                                    onClick { currentToggleImmersive(); true }
                                }
                                .pointerInput(infoVisible, backing, exiting, entering) {
                                    if (infoVisible || backing || exiting || entering) return@pointerInput
...
